syntax = "proto3";

option java_package = "House_Message";
option java_outer_classname = "HM_outer";

//-----------------------------------------------------------------------------------
//                         PROTOBUF MESSAGE
//-----------------------------------------------------------------------------------
/*
Invio delle statistiche alle altre case.
type  = STAT
value = valore da comunicare
timestamp = timestamp della media
id_measurment = id della media, per controllare che non sia doppio
reply = lo mette a true solo il coordinatore quando risponde, risponde solo se va tutto bene
*/
message Statistic
{
    string type = 1;
    double value = 2;
    int64 timestamp = 3;
    int32 measurement_id= 4;
    int32 house_id = 5;
}
//-----------------------------------------------------------------------------------
/*
type = ELECTION
house_id = l'id della casa che comunica in bcast che è necessaria un'elezione,
            quando è in reply questo campo contiene l'id del coordinatore
reply = true solo in risposta modificato solo quando si trova un coordinatore
*/
message Election
{
    string type = 1;
    int32 house_id = 2;
}
//-----------------------------------------------------------------------------------
/*
type = JOIN
id, port, ip sono le informazioni della casa che si presenta
coordinator = -1 per il reply = false, per reply = true, cioè in risposta, contiene l'id del coordinatore
reply
*/
message Join
{
    int32 house_id = 1;
    int32 port = 2;
    string ip = 3;
    int32 coordinator = 4;
 }
//-----------------------------------------------------------------------------------
/*
type = LEAVE
id = id della casa che viene rimossa
coordinator = è a true solo se chi sta venendo rimosso è un coordinatore
*/
message Leave
{
    int32 id = 1;
    bool coordinator = 2;
}
//-----------------------------------------------------------------------------------
/*
type = BOOST
id = id della casa che richiede il boost
timestamp = il momento della richiesta
reply = i valori possono essere
                OK: la risorsa è libera per il nodo che risponde
                WAIT: la risorsa è occupata dal nodo che risponde
                FREE: messaggio a tutti quanti
*/
message Boost
{
    int32 house_id = 1;
    int64 timestamp = 2;
    string reply = 3;
}


//-----------------------------------------------------------------------------------
//                         GRPC service
//-----------------------------------------------------------------------------------

service HouseService{
    //sono tutte chiamate unarie
    rpc presentation (Join) returns (Join){}
    rpc leaveNetwork (Leave) returns (Leave){}

    rpc sendStat (Statistic) returns (Statistic){}
    rpc spreadStat (Statistic) returns (Statistic){}

    rpc boostRequest (Boost) returns (Boost){}
    rpc boostRelease (Boost) returns (Boost){}

    rpc coordinatorElection (Election) returns (Election){}
    rpc imThePresident (Election) returns (Election){}

    rpc checkConnection (Join) returns (Join){}
}